Change email in mercurial
Former-commit-id: 3596801cf326c562b586dd3aa6630e50ee396005

--- a/files/.hgrc
+++ b/files/.hgrc
@@ -1,6 +1,6 @@
 [ui]
 style = ~/.hgrc.d/map-cmdline.colourlog
-username = Leszek Swirski <ls426@cam.ac.uk>
+username = Leszek Swirski <leszek@swirski.co.uk>
 
 [trusted]
 users = jc593 jw682
