[tmux] Update ssh and x environment vars

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -20,7 +20,7 @@ set -g set-clipboard on
 set -g history-limit 100000
 
 # copy environment variables
-set -g update-environment -r
+set -g update-environment "-r DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # Window options
 setw -g mode-keys vi # vi keys
