--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -43,14 +43,15 @@ set -g status-right-fg brightgreen
 setw -g window-status-current-bg default
 setw -g window-status-current-fg brightgreen
 
-unbind p
-bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'r' rectangle-toggle
 bind -t vi-copy 'y' copy-selection
 
 bind b last-window
 bind C-b last-window
+
+bind . next-window
+bind , previous-window
 
 bind h select-pane -L
 bind j select-pane -D
