[all] General update

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -6,15 +6,7 @@ set -g status-keys vi
 # Faster Command Sequences
 set -s escape-time 0
 
-setw -g mode-mouse on
-# mouse can be used to select panes
-set -g mouse-select-pane on
-# mouse can be used to select windows (by clicking in the status bar)
-set -g mouse-select-window on
-# mouse can be used to resize panes (by dragging dividers)
-set -g mouse-resize-pane on
-# not really sure what this does, but with it, the scrollwheel works inside Vim
-set -g mouse-utf8 on
+set -g mouse
 
 set -g set-clipboard on
 set -g history-limit 100000
@@ -24,13 +16,12 @@ set -g update-environment "-r DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SS
 
 # Window options
 setw -g mode-keys vi # vi keys
-setw -g utf8 on
 setw -g xterm-keys on
 setw -g automatic-rename on
 setw -g monitor-activity on
-setw -g aggressive-resize on
+setw -g aggressive-resize off
+#setw -g aggressive-resize on
 # allow mouse to enter copy mode and initiate selection
-setw -g mode-mouse on
 
 set -g status on
 set -g status-left ""
@@ -43,9 +34,9 @@ set -g status-right-fg brightgreen
 setw -g window-status-current-bg default
 setw -g window-status-current-fg brightgreen
 
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'r' rectangle-toggle
-bind -t vi-copy 'y' copy-selection
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'r' send-keys -X rectangle-toggle
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
 
 bind b last-window
 bind C-b last-window
