--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -12,7 +12,7 @@ set -g set-clipboard on
 set -g history-limit 100000
 
 # copy environment variables
-set -g update-environment "-r DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # Window options
 setw -g mode-keys vi # vi keys
@@ -27,12 +27,9 @@ set -g status on
 set -g status-left ""
 set -g status-right "%d/%m/%y %T"
 set -g status-interval 1
-set -g status-bg black
-set -g status-fg white
-set -g status-attr none
-set -g status-right-fg brightgreen
-setw -g window-status-current-bg default
-setw -g window-status-current-fg brightgreen
+set -g status-style fg=black,fg=white
+set -g status-right-style fg=brightgreen
+setw -g window-status-current-style fg=brightgreen,bg=default
 
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'r' send-keys -X rectangle-toggle
@@ -69,4 +66,5 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+
